--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wepy-calendar-range",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "a package of wepy for calendar-range",
   "main": "calendar.wpy",
   "scripts": {
@@ -15,6 +15,7 @@
   "bugs": {
     "url": "https://github.com/bradenhan/wepy-calendar-range/issues"
   },
+  "keywords" : "wepy,calendar,range",
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
